--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h2>I'am a Web Developer</h2>
 <hr />
 <h3><a href="./public/movie-ranking.html">Movie-ranking Projecta</a></h3>
-<img src="./assets/images/movie-ranking2.png" height="200" alt="movie ranking project preview"/>
+<img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
 <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-<img src="./assets/november.png" height="200" alt="birthday invite project preview"/>
+<img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
 <hr />
 <a href="./public/about.html">About me</a>
-<a href="./assets/images/contact-me.png">Contact Me</a>
+<a href="./public/contact.html">Contact Me</a>
 </body>
 
 </html>
